2002-05-31  Mito <mito@mxa.nes.nec.co.jp>

	* w3m-weather.el (w3m-weather-completion-table): Fix "niigata-kaetsu".

2002-05-30  Kenichi SATO <ksato@iijmio-mail.jp>

	* sb-sponichi.el (shimbun-sponichi-groups): Add golf and battle.
	(shimbun-get-headers): Follow the change of the Web site.
	Modify regexp to get flash articles.
	(shimbun-get-headers): Change Message-ID format.

2002-05-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-make-ccl-coding-system): Make it recallable for
	the existing coding-systems (we can now reload w3m.elc under
	XEmacs 21.5-b6 and later).

2002-05-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-w3m-retrieve-1): Don't decode the contents when
	redirect.

2002-05-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (define-ccl-program): Remove advice when non-MULE.
	It might be specified by pccl.elc if it has been mis-compiled for
	XEmacs with MULE.

	* w3m.el (w3m-delete-frame-maybe): Don't delete the current frame
	if it is the sole frame in the screen.

2002-05-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-zdnet.el (shimbun-make-contents): Small clean up.

2002-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-geocrawler.el (customize-save-variable): Shut old
	Emacsen up when compiling.
	* shimbun/sb-makanai.el (md5): Ditto.
	* w3m-xmas.el (unicode-to-char): Shut XEmacs 21.5-b5 and earlier
	up when compiling.

2002-05-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el (shimbun-make-html-contents): Insert HTML,
	HEAD, BASE, and BODY tag.

	* shimbun/sb-zdnet.el (shimbun-get-headers): Restore Message-ID
	format.
	(shimbun-zdnet-groups): Abolishded.
	(shimbun-groups): New method.
	(shimbun-get-headers): Small clean up.

2002-05-28  Kenichi SATO <ksato@iijmio-mail.jp>

	* sb-zdnet.el (shimbun-zdnet-group-url-alist): Abolishded.
	(shimbun-zdnet-group-alist): New variable.
	(shimbun-zdnet-groups): Refer `shimbun-zdnet-group-alist'.
	(shimbun-index-url): Ditto.